moved resume out of landing container and corrected about me on small screens

--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -137,7 +137,7 @@ h6 {
 
 .container {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   align-items: flex-start;
   align-content: space-between;
 }
@@ -166,7 +166,10 @@ a {
 
 @media only screen and (max-width: 1150px) {
   .firstsection {
-    padding-top: 110px;
+    padding-top: 100px;
+  }
+  img {
+    display: block;
   }
 }
 
@@ -182,12 +185,12 @@ a {
   display: flex;
 }
 
-// .socialLinks {
-//   flex-direction: column;
-// }
+.collapse {
+  flex-direction: column;
+}
 
   .firstsection {
-    padding-top: 130px;
+    padding-top: 50px;
   }
 
   .largelinklogos {
